# commute-quality-calculator

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: input1.json  input3.json
src/: calculators.py  main.py  schemas.py
tests/: conftest.py
tests/fixtures/: valid_input.json  valid_input_without_optionals.json
tests/functional/: test_cli.py
tests/unit/: test_calculators.py
